--- a/appveyor.yml
+++ b/appveyor.yml
@@ -95,7 +95,7 @@ environment:
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw492_32\bin
     PLATFORM: x86
-    DEPLOY: false
+    DEPLOY: true
   - QT5: Qt\5.6\msvc2015_64
     QT_VERSION: Qt5.6
     QMAKE_GENERATOR: "NMake Makefiles JOM"
@@ -196,7 +196,7 @@ after_test:
 
 artifacts:
   - path: build/package/valentina
-    name: valentina-win-$(QT_VERSION)-$(APPVEYOR_REPO_COMMIT)
+    name: valentina-win-$(QT_VERSION)-($APPVEYOR_REPO_BRANCH)-$(APPVEYOR_REPO_COMMIT)
 
 deploy:
 - provider: BinTray
@@ -211,4 +211,4 @@ deploy:
   version: 0.6
   on:
     DEPLOY: true
-  artifact: valentina-win-$(QT_VERSION)-$(APPVEYOR_REPO_COMMIT)
+  artifact: valentina-win-$(QT_VERSION)-($APPVEYOR_REPO_BRANCH)-$(APPVEYOR_REPO_COMMIT)
