--- a/appveyor.yml
+++ b/appveyor.yml
@@ -208,7 +208,7 @@ deploy:
   package: valentina-win_auto-upload
   publish: true
   override: true
-  version: 0.6
+  version: 0.6a
   on:
     DEPLOY: true
   artifact: valentina-win-$(QT_VERSION)-$(APPVEYOR_REPO_BRANCH)-$(APPVEYOR_REPO_COMMIT)
