Try newer xcode version to fix travis issue.
--HG--
branch : develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ matrix:
   - os: osx
     compiler: clang
     env: DEPLOY=true
+    osx_image: xcode9
 before_install:
 - |
   if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then
