AppVeyor added support for Qt 5.11.
--HG--
branch : develop

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,24 +38,40 @@ shallow_clone: false                 # default is "false"
 
 environment:
   matrix:
-  - QT5: Qt\5.10.1\mingw53_32
-    QT_VERSION: Qt5.10
+  - QT5: Qt\5.11\mingw53_32
+    QT_VERSION: Qt5.11
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
     PLATFORM: x86
-    DEPLOY: true
+    DEPLOY: true  
   - QT5: Qt\5.6\mingw49_32
     QT_VERSION: Qt5.6
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw492_32\bin
     PLATFORM: x86
     DEPLOY: true
-  - QT5: Qt\5.10.1\msvc2015_64
+  - QT5: Qt\5.11\msvc2015_64
     QMAKE_GENERATOR: "NMake Makefiles JOM"
     VSVER: 14
     PLATFORM: x64
     DEPLOY: false
-  - QT5: Qt\5.10.1\msvc2015
+  - QT5: Qt\5.11\msvc2015
+    QMAKE_GENERATOR: "NMake Makefiles JOM"
+    VSVER: 14
+    PLATFORM: x86
+    DEPLOY: false 
+  - QT5: Qt\5.10\mingw53_32
+    QT_VERSION: Qt5.10
+    QMAKE_GENERATOR: "MinGW Makefiles"
+    MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
+    PLATFORM: x86
+    DEPLOY: false
+  - QT5: Qt\5.10\msvc2015_64
+    QMAKE_GENERATOR: "NMake Makefiles JOM"
+    VSVER: 14
+    PLATFORM: x64
+    DEPLOY: false
+  - QT5: Qt\5.10\msvc2015
     QMAKE_GENERATOR: "NMake Makefiles JOM"
     VSVER: 14
     PLATFORM: x86
