dump build-wrapper-dump.json and build-wrapper.log if build fails.
--HG--
branch : develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,10 @@ script:
     sonar-scanner;
   else
     make -j1;
-  fi  
+  fi
+after_failure:
+  - if [ -f /home/travis/build/dismine/Valentina_git/bw-outputs/build-wrapper-dump.json ]; then cat /home/travis/build/dismine/Valentina_git/bw-outputs/build-wrapper-dump.json; fi  
+  - if [ -f /home/travis/build/dismine/Valentina_git/bw-outputs/build-wrapper.log ]; then cat /home/travis/build/dismine/Valentina_git/bw-outputs/build-wrapper.log; fi 
 notifications:
   email:
     recipients:
