Try to speed up sonarqube scanning.
--HG--
branch : develop

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -14,9 +14,13 @@ a unique pattern making tool.
 sonar.sourceEncoding=UTF-8
 
 # exclude qt created files
-sonar.exclusions=**/ui_*.h
+sonar.exclusions=**/ui_*.h, **/qrc_*.cpp, **/moc_*.cpp
+
+sonar.test.exclusions=src/test/**/*
 
 # The build-wrapper output dir
 sonar.cfamily.build-wrapper-output=bw-outputs
 
 sonar.sources=src
+
+sonar.cfamily.threads=2
