Change Travis linux image to xenial for sonarcloud stage.
--HG--
branch : develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ jobs:
     osx_image: xcode8
   - stage: "sonarcloud"
     os: linux
-    dist: trusty
+    dist: xenial
     sudo: required
     compiler: clang
     env: 
