--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,10 +38,10 @@ shallow_clone: false                 # default is "false"
 
 environment:
   matrix:
-  - QT5: Qt\5.11\mingw53_32
-    QT_VERSION: Qt5.11
+  - QT5: Qt\5.12\mingw73_32
+    QT_VERSION: Qt5.12
     QMAKE_GENERATOR: "MinGW Makefiles"
-    MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
+    MINGW_PATH: C:\Qt\Tools\mingw73_32\bin
     PLATFORM: x86
     DEPLOY: true  
   - QT5: Qt\5.6\mingw49_32
@@ -50,6 +50,12 @@ environment:
     MINGW_PATH: C:\Qt\Tools\mingw492_32\bin
     PLATFORM: x86
     DEPLOY: true
+  - QT5: Qt\5.11\mingw53_32
+    QT_VERSION: Qt5.11
+    QMAKE_GENERATOR: "MinGW Makefiles"
+    MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
+    PLATFORM: x86
+    DEPLOY: false 
   - QT5: Qt\5.11\msvc2015_64
     QMAKE_GENERATOR: "NMake Makefiles JOM"
     VSVER: 14
