--- a/appveyor.yml
+++ b/appveyor.yml
@@ -113,6 +113,8 @@ environment:
 
 # scripts that are called at very beginning, before repo cloning
 init:
+# Uncomment if need access through RDP
+  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   # Path before
   - path
   - set QTDIR=C:\%QT5%
