--- a/appveyor.yml
+++ b/appveyor.yml
@@ -41,7 +41,7 @@ environment:
   - QT5: Qt\5.12\mingw73_32
     QT_VERSION: Qt5.12
     QMAKE_GENERATOR: "MinGW Makefiles"
-    MINGW_PATH: C:\Qt\Tools\mingw73_32\bin
+    MINGW_PATH: C:\Qt\Tools\mingw730_32\bin
     PLATFORM: x86
     DEPLOY: true  
   - QT5: Qt\5.6\mingw49_32
@@ -114,7 +114,7 @@ environment:
 # scripts that are called at very beginning, before repo cloning
 init:
 # Uncomment if need access through RDP
-  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
+#  - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
   # Path before
   - path
   - set QTDIR=C:\%QT5%
