Fix invalid bitbucket-pipelines.yml.
--HG--
branch : develop

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ pipelines:
     develop:
       - step:
           caches:
-            ccache
+            - ccache
           script:
             - cat /etc/*-release
             - uname -a
