Add support for Qt 5.13.
Update OpenSSL version to 1.1.1d.

--HG--
branch : develop

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,18 +38,34 @@ shallow_clone: false                 # default is "false"
 
 environment:
   matrix:
-  - QT5: Qt\5.12\mingw73_32
-    QT_VERSION: Qt5.12
+  - QT5: Qt\5.13\mingw73_32
+    QT_VERSION: Qt5.13
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw730_32\bin
     PLATFORM: x86
-    DEPLOY: true  
+    DEPLOY: true
   - QT5: Qt\5.6\mingw49_32
     QT_VERSION: Qt5.6
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw492_32\bin
     PLATFORM: x86
     DEPLOY: true
+  - QT5: Qt\5.13\msvc2015_64
+    QMAKE_GENERATOR: "NMake Makefiles JOM"
+    VSVER: 14
+    PLATFORM: x64
+    DEPLOY: false
+  - QT5: Qt\5.12\mingw73_32
+    QT_VERSION: Qt5.12
+    QMAKE_GENERATOR: "MinGW Makefiles"
+    MINGW_PATH: C:\Qt\Tools\mingw730_32\bin
+    PLATFORM: x86
+    DEPLOY: false
+  - QT5: Qt\5.12\msvc2015_64
+    QMAKE_GENERATOR: "NMake Makefiles JOM"
+    VSVER: 14
+    PLATFORM: x64
+    DEPLOY: false  
   - QT5: Qt\5.11\mingw53_32
     QT_VERSION: Qt5.11
     QMAKE_GENERATOR: "MinGW Makefiles"
