Warning: 'qt5 --head' formula is unreadable: No available formula with the name "qt5 --head".
--HG--
branch : develop

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ jobs:
     osx_image: xcode11
     addons:
         homebrew:
-          packages: qt5 --HEAD
+          packages: qt5
   - os: osx
     compiler: clang
     env: 
