Add Qt 5.14 to test matrix.
--HG--
branch : develop

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,6 +12,11 @@
 # version format
 version: '{build}-{branch}'
 
+image:
+  - Visual Studio 2019
+  - Visual Studio 2017
+  - Visual Studio 2015
+
 # branches to build
 branches:
   # whitelist
@@ -38,93 +43,117 @@ shallow_clone: false                 # default is "false"
 
 environment:
   matrix:
-  - QT5: Qt\5.13\mingw73_32
-    QT_VERSION: Qt5.13
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.14\mingw73_32
+    QT_VERSION: Qt5.14
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw730_32\bin
     PLATFORM: x86
     DEPLOY: true
-  - QT5: Qt\5.6\mingw49_32
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.6\mingw49_32
     QT_VERSION: Qt5.6
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw492_32\bin
     PLATFORM: x86
     DEPLOY: true
-  - QT5: Qt\5.13\msvc2015_64
-    QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.14\mingw73_64
+    QT_VERSION: Qt5.14
+    QMAKE_GENERATOR: "MinGW Makefiles"
+    MINGW_PATH: C:\Qt\Tools\mingw730_64\bin
     PLATFORM: x64
     DEPLOY: false
-  - QT5: Qt\5.12\mingw73_32
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.14\msvc2017_64
+    QMAKE_GENERATOR: "NMake Makefiles JOM"
+    VSVER: 15
+    PLATFORM: x64
+    DEPLOY: false
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.13\mingw73_64
+    QT_VERSION: Qt5.13
+    QMAKE_GENERATOR: "MinGW Makefiles"
+    MINGW_PATH: C:\Qt\Tools\mingw730_64\bin
+    PLATFORM: x64
+    DEPLOY: false
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.13\msvc2017_64
+    QMAKE_GENERATOR: "NMake Makefiles JOM"
+    VSVER: 15
+    PLATFORM: x64
+    DEPLOY: false
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.12\mingw73_64
     QT_VERSION: Qt5.12
     QMAKE_GENERATOR: "MinGW Makefiles"
-    MINGW_PATH: C:\Qt\Tools\mingw730_32\bin
-    PLATFORM: x86
+    MINGW_PATH: C:\Qt\Tools\mingw730_64\bin
+    PLATFORM: x64
     DEPLOY: false
-  - QT5: Qt\5.12\msvc2015_64
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+    QT5: Qt\5.12\msvc2017_64
     QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
+    VSVER: 15
     PLATFORM: x64
     DEPLOY: false  
-  - QT5: Qt\5.11\mingw53_32
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.11\mingw53_32
     QT_VERSION: Qt5.11
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
     PLATFORM: x86
     DEPLOY: false 
-  - QT5: Qt\5.11\msvc2015_64
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    QT5: Qt\5.11\msvc2015_64
     QMAKE_GENERATOR: "NMake Makefiles JOM"
     VSVER: 14
     PLATFORM: x64
     DEPLOY: false
-  - QT5: Qt\5.11\msvc2015
-    QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
-    PLATFORM: x86
-    DEPLOY: false 
-  - QT5: Qt\5.10\mingw53_32
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.10\mingw53_32
     QT_VERSION: Qt5.10
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
     PLATFORM: x86
     DEPLOY: false
-  - QT5: Qt\5.10\msvc2015_64
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.10\msvc2017_64
     QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
+    VSVER: 15
     PLATFORM: x64
     DEPLOY: false
-  - QT5: Qt\5.10\msvc2015
-    QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
-    PLATFORM: x86
-    DEPLOY: false
-  - QT5: Qt\5.9\mingw53_32
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.9\mingw53_32
     QT_VERSION: Qt5.9
     QMAKE_GENERATOR: "MinGW Makefiles"
     MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
     PLATFORM: x86
     DEPLOY: false
-  - QT5: Qt\5.9\msvc2015_64
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.9\msvc2017_64
     QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
+    VSVER: 15
     PLATFORM: x64
     DEPLOY: false
-  - QT5: Qt\5.9\msvc2015
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    QT5: Qt\5.7\mingw53_32
+    QT_VERSION: Qt5.7
+    QMAKE_GENERATOR: "MinGW Makefiles"
+    MINGW_PATH: C:\Qt\Tools\mingw530_32\bin
+    PLATFORM: x86
+    DEPLOY: false
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2015
+    QT5: Qt\5.7\msvc2015_32
     QMAKE_GENERATOR: "NMake Makefiles JOM"
     VSVER: 14
     PLATFORM: x86
     DEPLOY: false
-  - QT5: Qt\5.6\msvc2015_64
+  - APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2017
+    QT5: Qt\5.6\msvc2015_64
     QT_VERSION: Qt5.6
     QMAKE_GENERATOR: "NMake Makefiles JOM"
     VSVER: 14
     PLATFORM: x64
-    DEPLOY: false
-  - QT5: Qt\5.6\msvc2015
-    QT_VERSION: Qt5.6
-    QMAKE_GENERATOR: "NMake Makefiles JOM"
-    VSVER: 14
-    PLATFORM: x86
     DEPLOY: false
 
 # scripts that are called at very beginning, before repo cloning
