--- a/appveyor.yml
+++ b/appveyor.yml
@@ -162,10 +162,11 @@ init:
   - if NOT "%QMAKE_GENERATOR%" == "MinGW Makefiles" echo "Using Visual Studio %VSVER%.0"
   - if "%QMAKE_GENERATOR%" == "MinGW Makefiles" echo "Using MinGW"
   # Set VC variables for the platform
-  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x86" IF "%VSVER%" == "15" call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\vsdevcmd.bat" -arch=x86 -host_arch=x64
-  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x64" IF "%VSVER%" == "15" call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\Common7\Tools\vsdevcmd.bat" -arch=x64 -host_arch=x64
-  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x86" IF "%VSVER%" == "14" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\Common7\Tools\vsvars32.bat"
-  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x64" IF "%VSVER%" == "14" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\bin\x86_amd64\vcvarsx86_amd64.bat"
+  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x86" IF "%VSVER%" == "15" call "C:\Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars32.bat"
+  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x64" IF "%VSVER%" == "15" Program Files (x86)\Microsoft Visual Studio\2017\Community\VC\Auxiliary\Build\vcvars64.bat"
+  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x86" IF "%VSVER%" == "14" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86
+  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x64" IF "%VSVER%" == "14" call "C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin\SetEnv.cmd" /x64
+  - IF "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" IF "%PLATFORM%" == "x64" IF "%VSVER%" == "14" call "C:\Program Files (x86)\Microsoft Visual Studio 14.0\VC\vcvarsall.bat" x86_amd64
   - if "%QMAKE_GENERATOR%" == "MinGW Makefiles" set PATH=%MINGW_PATH%;%PATH%
   - if "%QMAKE_GENERATOR%" == "NMake Makefiles JOM" set PATH=C:\Qt\Tools\QtCreator\bin;%PATH%
   - set PATH=C:\projects\valentina\build\src\libs\vpropertyexplorer\bin;C:\projects\valentina\build\src\libs\qmuparser\bin;%PATH%
