--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 # must be unique in a given SonarQube instance
-sonar.projectKey=dismine:valentina
+sonar.projectKey=dismine_valentina
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=Valentina
 sonar.projectVersion=0.7a
@@ -25,4 +25,4 @@ sonar.sources=src
 
 sonar.cfamily.threads=2
 
-sonar.organization=default
+sonar.organization=dismine
