--- a/appveyor.yml
+++ b/appveyor.yml
@@ -174,6 +174,9 @@ init:
   - set PATH=C:\projects\valentina\build\src\libs\vpropertyexplorer\bin;C:\projects\valentina\build\src\libs\qmuparser\bin;%PATH%
   # Path after
   - path
+    # Trick qmake to not work through MSYS
+  - del /F "C:\Program Files\Git\usr\bin\sh.exe"
+  - del /F "C:\Program Files\Git\bin\sh.exe"
   - qmake -v
 
 #---------------------------------#
