--- a/.tx/config
+++ b/.tx/config
@@ -2,7 +2,7 @@
 host = https://www.transifex.com
 lang_map = uk: uk_UA, cs : cs_CZ, nl : nl_NL, fi : fi_FI, es : es_ES, id : id_ID
 
-[valentina-project.valentina-ts]
+[valentina-project.valentina_ts]
 file_filter = share/translations/valentina_<lang>.ts
 minimum_perc = 20
 source_file = share/translations/valentina.ts
